Sun Dec 16 19:08:38 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/api_status.txt 
	- set useless db-lib functions' status to 'never'
	
Sun Dec 16 16:58:35 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am doc/bsqlodbc.txt doc/osql.txt
	* doc/userguide.sgml
	- updated for next release

Fri Dec 14 11:23:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-other.sh: fix some strange echo portability
	* src/dblib/unittests/null.c src/dblib/unittests/null2.c:
	- make ignore less verbose

Thu Dec 13 23:45:55 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/Makefile.am build bsqlodbc out-of-tree
	* src/dblib/unittests/null.c prettier & correct, passes

Thu Dec 13 21:12:20 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/buffering.h: fix null2

Thu Dec 13 19:04:35 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/Makefile.am:
	- fix bsqlodbc compile if not standard sql.h path

Wed Dec 12 07:27:07 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: fix for 64bit

Tue Dec 11 11:09:52 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: remove warning
	* misc/freetds_autobuild: fix if password empty

Tue Dec 11 00:02:16 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml minor touchups 
	* src/dblib/dblib.c src/dblib/unittests/setnull.c
	- unittests/setnull.c passes.

Mon Dec 10 14:05:06 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: remove warning

Mon Dec 10 00:08:45 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am doc/userguide.sgml some improvements
	doc/grep_sample_code doc/images/caution.gif 
	doc/images/warning.gif
	doc/images/callouts/1.gif doc/images/callouts/2.gif
	doc/images/callouts/3.gif doc/images/callouts/4.gif
	doc/images/callouts/5.gif doc/images/callouts/6.gif
	doc/images/callouts/7.gif doc/images/callouts/8.gif
	doc/images/callouts/9.gif doc/images/callouts/10.gif