@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.66 2007-08-16 08:10:10 freddy77 Exp $
+# $Id: Makefile.am,v 1.67 2007-12-18 08:10:23 freddy77 Exp $
 TESTS		=	\
 			t0001$(EXEEXT) t0002$(EXEEXT) t0003$(EXEEXT)\
 			t0004$(EXEEXT) connect$(EXEEXT) print$(EXEEXT)\
@@ -18,7 +18,8 @@ TESTS		=	\
 			describecol$(EXEEXT) copydesc$(EXEEXT)\
 			prepclose$(EXEEXT) warning$(EXEEXT) \
 			paramcore$(EXEEXT) timeout2$(EXEEXT) timeout3$(EXEEXT) \
-			connect2$(EXEEXT) timeout4$(EXEEXT) freeclose$(EXEEXT)
+			connect2$(EXEEXT) timeout4$(EXEEXT) freeclose$(EXEEXT) \
+			cursor3$(EXEEXT) cursor4$(EXEEXT) cursor5$(EXEEXT)
 
 check_PROGRAMS	=	$(TESTS)
 
@@ -71,6 +72,9 @@ timeout3_SOURCES	= timeout3.c common.c common.h
 connect2_SOURCES	=	connect2.c common.c common.h
 timeout4_SOURCES	= timeout4.c common.c common.h
 freeclose_SOURCES	= freeclose.c common.c common.h
+cursor3_SOURCES	= cursor3.c common.c common.h
+cursor4_SOURCES	= cursor4.c common.c common.h
+cursor5_SOURCES	= cursor5.c common.c common.h
 
 AM_CPPFLAGS	=	-I$(top_srcdir)/include $(ODBC_INC) -DFREETDS_SRCDIR=\"$(srcdir)\"
 if MINGW32
